Changes in version 0.2.0.10-alpha - 2007-1?-??
  o New requirements:
    - Drop support for OpenSSL version 0.9.6.  Just about nobody was using
      it, it had no AES, and it hasn't seen any security patches since 2004.

  o Minor features:
    - Clients new hold circuitless TLS connections open for 1.5 times
      MaxCircuitDirtiness, since it is likely that they'll need to build
      a circuit over them within that timeframe.  Previously, they held them
      open only for KeepalivePeriod.

  o Minor bugfixes:
    - Refuse to start if both ORPort and UseBridges are set. Bugfix
      on 0.2.0.x.
    - Better log message on vote from unknown authority.

  o Minor bugfixes (memory leaks):
    - Stop leaking memory every time we parse a v3 certificate. Bugfix
      on 0.2.0.1-alpha.
    - Stop leaking memory every time we load a v3 certificate. Bugfix
      on 0.2.0.1-alpha.  Fixes Bug 536
    - Stop leaking a cached networkstatus on exit.  Bugfix on
      0.2.0.3-alpha.
    - Stop leaking voter information every time we free a consensus.  Bugfix
      on 0.2.0.3-alpha.
    - Stop leaking signed data every time we check a voter signature.
      Bugfix on 0.2.0.3-alpha.
    - Stop leaking a signature every time we fail to parse a consensus or
      a vote.  Bugfix on 0.2.0.3-alpha.
    - Stop leaking v2_download_status_map on shutdown.  Bugfix on
      0.2.0.9-alpha.


Changes in version 0.2.0.9-alpha - 2007-10-24
  o Major features (directory system):
    - Clients now download v3 consensus networkstatus documents instead
      of v2 networkstatus documents. Clients and caches now base their
      opinions about routers on these consensus documents. Clients only
      download router descriptors listed in the consensus.
    - Authorities now list servers who have the same nickname as
      a different named server, but list them with a new flag,
      "Unnamed". Now we can list servers that happen to pick the same