@@ -990,11 +990,16 @@ $Id$
    "Fast" -- A router is 'Fast' if it is active, and its bandwidth is
    either in the top 7/8ths for known active routers or at least 100KB/s.
 
-   "Guard" -- A router is a possible 'Guard' if it is 'Stable' and its
-   bandwidth is either at least the median for known active routers or
-   at least 250KB/s. If the total bandwidth of active non-BadExit Exit
-   servers is less than one third of the total bandwidth of all active
-   servers, no Exit is listed as a Guard.
+   "Guard" -- A router is a possible 'Guard' if its Weighted Fractional
+   Uptime is at least the median for known active routers, and its bandwidth
+   is either at least the median for known active routers or at least
+   250KB/s. If the total bandwidth of active non-BadExit Exit servers is less
+   than one third of the total bandwidth of all active servers, no Exit is
+   listed as a Guard.
+
+        To calculate weighted fractional uptime, compute the fraction
+        of time that the router is up in any given day, weighting so that
+        downtime and uptime in the past counts less.
 
    "Authority" -- A router is called an 'Authority' if the authority
    generating the network-status document believes it is an authority.
